# clap-validator-plugin

./: CMakeLists.txt  README.md
.github/workflows/: build-plugin.yml
cmake/: compile-options.cmake  fetch-deps.cmake
scripts/: fix_file_comments.pl  fix_header_guards.pl
src/: cvp-entry-impl.cpp  cvp-entry-impl.h  cvp-entry.cpp  cvp-plugin-base.h  cvp-plugin.cpp  cvp-plugin.h  spsc-lock-free-queue.h
src/gui/: gui-macos.mm  gui-unimpl.cpp  gui-win32.cpp  gui.h
src/instances/: note-generator.h  note-transformer.h  stereo-effect.h  stereo-generator.h
